# renda-sua

./: .cursorrules  .cursorrules-backend  .dockerignore  .gitignore  ADDRESS_DELETION_SAFEGUARDS.md  CHANGELOG-fix-item-images-mutation.md  COMPLETE_ORDER_APIS_SUMMARY.md  DELIVERY_APP_ROADMAP.md  DOCKER_README.md  Dockerfile.backend  Dockerfile.backend.prod  EMAIL_NOTIFICATION_SYSTEM_IMPLEMENTATION.md  FRONTEND_ORDER_MANAGEMENT_UPDATE.md  ORDER_APIS_SUMMARY.md  RATING_SYSTEM_README.md  README.md  app.mdc  docker-compose.backend.yml  nx.json  package-lock.json  package.json  playwright.config.ts  pyrightconfig.json  test-order-apis.js  tsconfig.base.json  tsconfig.json
apps/cdk/src/core-packages/: __init__.py  pyproject.toml  requirements.txt  setup.py
apps/cdk/src/core-packages/commission_handler/: __init__.py  calculator.py
apps/cdk/src/core-packages/hasura_client/: __init__.py  accounts_service.py  base.py  location_service.py  user_service.py
apps/cdk/src/core-packages/models/: Account.py  AccountTransaction.py  AccountTransactionsAggregateField.py  AccountTransactionsAvgField.py  AccountTransactionsMaxField.py  AccountTransactionsMinField.py  AccountTransactionsMutationResponse.py  AccountTransactionsStddevField.py  AccountTransactionsStddevPopField.py  AccountTransactionsStddevSampField.py  AccountTransactionsSumField.py  AccountTransactionsVarPopField.py  AccountTransactionsVarSampField.py  AccountTransactionsVarianceField.py  AccountsAggregateField.py  AccountsAvgField.py  AccountsMaxField.py  AccountsMinField.py  AccountsMutationResponse.py  Addresse.py  (+420 more)
(+2457 files in other folders)
